<resources>
    <string name="Ekraa">Ekraa </string>

    <string name="app_name">Electric School</string>
    <string name="signin"> Sign Up </string>
    <string name="userName">User Name :</string>
    <string name="password">Password :</string>
    <string name="conPass">confirm password</string>
    <string name="sonname">complete name</string>
    <string name="details">details</string>
    <string-array name="clases">
        <item>First clase</item>
        <item>Second clase</item>
        <item>Third clase</item>
        <item>Fourth clase</item>
        <item>Fifth clase</item>
        <item>Sixth clase</item>
    </string-array>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="Main_Page">Main Page</string>
    <string name="Detail_Page">Main Page</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="on">male</string>
    <string name="off">female</string>

    <string name="action_today">Today</string>
    <string name="action_day_view">Day view</string>
    <string name="action_three_day_view">3 day view</string>
    <string name="action_week_view">Week view</string>
    <string name="title_activity_basic">Basic Example</string>
    <string name="title_activity_asynchronous">Asynchronous Events</string>
    <string name="async_error">Could not download events from the internet</string>
    <string name="our_school_is_interested_in_training_students_on_behaviors_to_become_adaptive_to_society">Our school is interested in training students on behaviors to become adaptive to society.</string>
    <string name="also_interested_in_the_development_of_students_abilities">Also interested in the development of students abilities</string>
    <string name="and_training_the_student_to_face_the_tests">And training the student to face the tests ....</string>
    <string name="our_goal_is_to_prepare_the_student_for_the_future_stages_of_his_life">Our goal is to prepare the student for the future stages of his life ..</string>
    <string name="all_rights_reserved">All rights reserved</string>
</resources>
